remove old authentication code -- using Auth0 now
